--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -110,11 +110,11 @@
     <thead>
         <tr>
             <th class="col-sm-1">Status</th>
-            <th class="col-sm-3">Item Name</th>
+            <th class="col-sm-2">Item Name</th>
             <th class="col-sm-2">Date Purchased</th>
             <th class="col-sm-2">Assigned To</th>
-            <th class="col-sm-2">Serial Number</th>
-            <th class="col-sm-2" style="text-align:center">Actions</th>
+            <th class="col-sm-1">Serial Number</th>
+            <th class="col-sm-2 action-cols">Actions</th>
         </tr>
     </thead>
     <tbody class="assets-list">
