--- a/app/scripts/templates/employee-details.ejs
+++ b/app/scripts/templates/employee-details.ejs
@@ -14,60 +14,61 @@
     </div>
 </div>
 <div class="row-fluid">
-    <br />
+	<hr>
+    <br>    
     <div class="col-sm-4">
+    	<small>FIRST NAME</small>
         <h3>
             <%= model.get('first_name') %>
         </h3>
-        <small>FIRST NAME</small>
     </div>
     <div class="col-sm-4">
+    	<small>MIDDLE NAME</small>
         <h3>
             <%= model.get('middle_name') %>
         </h3>
-        <small>MIDDLE NAME</small>
     </div>
     <div class="col-sm-4">
+    	<small>LAST NAME</small>
         <h3>
             <%= model.get('last_name') %>
-        </h3>
-        <small>LAST NAME</small>
+        </h3>        
     </div>
 </div>
 <div class="row-fluid">
     <br>&nbsp;
     <hr>
 </div>
-<div class="row-flui">
+<div class="row-fluid">
     <div class="col-sm-12">
+    	<small>EMAIL</small>
         <h3>
             <%= model.get('email') %>
         </h3>
-        <small>EMAIL</small>
         <hr>
     </div>
 </div>
 <div class="row-fluid">
     <div class="col-sm-12">
+    	<small>ADDRESS</small>
         <h4>
             <%= model.get('address') %>
         </h4>
-        <small>ADDRESS</small>
         <hr>
     </div>
 </div>
 <div class="row-fluid">
     <div class="col-sm-6">
+    	<small>GENDER</small>
         <h4>
             <%= model.get('gender') %>
         </h4>
-        <small>GENDER</small>
     </div>
     <div class="col-sm-6">
+        <small>BIRTHDAY</small>
         <h4>
             <%= model.getDateOfBirth() %>
         </h4>
-        <small>BIRTHDAY</small>
     </div>
 </div>
 <div class="row-fluid">
@@ -76,16 +77,16 @@
 </div>
 <div class="row-fluid">
     <div class="col-sm-6">
+        <small>USER ROLE</small>
         <h4>
             <%= model.get('user_role') %>
         </h4>
-        <small>USER ROLE</small>
     </div>
     <div class="col-sm-6">
+        <small>DATE EMPLOYED</small>
         <h4>
             <%= model.getDateEmployed() %>
         </h4>
-        <small>DATE EMPLOYED</small>
     </div>
 </div>
 <div class="row-fluid">
@@ -94,8 +95,8 @@
 </div>
 <div class="row-fluid">
     <div class="col-sm-12">
-        <h4>None</h4>
         <small>ASSETS</small>
+        <h4>None</h4>
         <hr>
     </div>
 </div>
