Fix edit / update module
- modify app/scripts/templates/employee-edit.ejs
  - add error message
- modify app/scripts/views/EmployeeView.js
  - add code to check error response

--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -87,7 +87,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email Address</label>
+                    <label for="email">Email Address
+                        <span class="email-error">- email address is taken!</span>
+                    </label>
                     <input type="email" class="form-control" id="email" placeholder="name@globalzeal.net" value="<%= model.get('email') %>">
                 </div>
             </div>
