--- a/app/scripts/templates/forgot-password.ejs
+++ b/app/scripts/templates/forgot-password.ejs
@@ -1,24 +1,27 @@
 <div class="col-sm-8 col-sm-offset-2">
-  <div class="panel panel-default">
-    <div class="panel-heading"><h4>Forgot your password?</h4></div>
-    <div class="panel-body">
-      <form action="/" method="POST" class="form-horizontal forgot-form" role="form">
-      <div class="alert alert-danger hidden">
-        Wrong <strong>username</strong> or <strong>password</strong>! Please try again.
-      </div>
-      <div class="form-group">
-        <label for="email" class="col-sm-12">Enter your email address:</label>
-        <div class="col-sm-12">
-          <input type="text" class="form-control" id="email">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-12 btns">
-          <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip forgot-password" data-original-title="Reset Password"> Reset <span class="glyphicon glyphicon-lock"></span></button>
-          <button type="submit" class="btn btn-add btn-load" disabled>Please wait...</button>
-        </div>
-      </div>
-      </form>
-    </div>
-  </div>
+	<div class="panel panel-default">
+		<div class="panel-heading"><h4>Forgot your password?</h4></div>
+			<div class="panel-body">
+				<form action="/" method="POST" class="form-horizontal forgot-form" role="form">
+					<div class="alert alert-danger hidden">
+						Wrong <strong>username</strong> or <strong>password</strong>! Please try again.
+					</div>
+					<div class="form-group">
+						<label for="email" class="col-sm-12">Enter your email address:</label>
+						<div class="col-sm-12">
+							<input type="text" class="form-control" id="email">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-12 btns">
+							<button type="submit" class="btn btn-add"> Request Password
+								<span class="glyphicon glyphicon-circle-arrow-right"> </span>
+							</button>
+							<button type="submit" class="btn btn-add btn-load" disabled> Please wait... </button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
