--- a/app/scripts/templates/login-form.ejs
+++ b/app/scripts/templates/login-form.ejs
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-12">Password <a href="/reset-password">(Forgot Password)</a>
+                    <label for="password" class="col-sm-12">Password <a href="/reset-password" class="forgot-password">(Forgot Password)</a>
                     </label>
                     <div class="col-sm-12">
                         <input type="password" class="form-control" id="password">
