--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -21,7 +21,16 @@
     <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip assign-asset">
         <span class="glyphicon glyphicon-hand-up"></span>
     </button>
+        
     <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip delete-asset">&nbsp;x&nbsp;</button>
+
+    <div class="searchBox" style='display:none;' id=<%= "div"+ model.get( '_id' ) %>>
+        <input type="hidden" class="bigdrop" id="<%= model.get( 'serial_number') %>" style="width:150px;" />
+    </div>
+    <script type="text/javascript">
+        var id = <%= model.get( 'serial_number') %>
+        $('#'+id).nameSearch("http://localhost:3000/employees/search/");
+    </script>
 </td>
 <script>
 	$('.tool-tip').tooltip();
