working assigned item temporary code

--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -7,7 +7,7 @@
 <td>
     <%= model.getDatePurchased() %>
 </td>
-<td></td>
+<td><%= model.get( 'assignee') %></td>
 <td>
     <%= model.get( 'serial_number') %>
 </td>
