--- a/app/scripts/templates/employee-details.ejs
+++ b/app/scripts/templates/employee-details.ejs
@@ -8,7 +8,7 @@
         <div class=" pull-right">
             <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-sm edit-employee">
                 <span class="glyphicon glyphicon-edit"></span> Edit </button>
-            <button type="button" class="btn btn-danger btn-sm">
+            <button type="button" class="btn btn-danger btn-sm delete-employee">
                 <span class="glyphicon glyphicon-remove-circle"></span> Delete </button>
         </div>
     </div>
