--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -7,7 +7,16 @@
 <td>
     <%= model.getDatePurchased( ) %>
 </td>
-<td id="assignee_<%= model.get( '_id' ) %>"><%= model.get( 'assignee' ).first_name + " " + model.get( 'assignee' ).last_name %></td>
+
+<% if(model.get( 'assignee' ) == undefined) { 
+        var full_name = '';
+    } else {
+        var full_name = model.get( 'assignee' ).first_name + " " + model.get( 'assignee' ).last_name;
+        console.log(model.get( 'assignee' ));
+    } 
+%>
+
+<td id="assignee_<%= model.get( '_id' ) %>"><%= full_name %></td>
 <td>
     <%= model.get( 'serial_number' ) %>
 </td>
