--- a/app/scripts/templates/forgot-password.ejs
+++ b/app/scripts/templates/forgot-password.ejs
@@ -14,6 +14,10 @@
 					</div>
 					<div class="form-group">
 						<div class="col-sm-12 btns">
+							<button type="button" class="btn btn-default btn-back" href='/'>
+								<span class="glyphicon glyphicon-circle-arrow-left"> </span>
+								Back
+							</button>
 							<button type="submit" class="btn btn-add"> Request Password
 								<span class="glyphicon glyphicon-circle-arrow-right"> </span>
 							</button>
