changed view details functions showing supplier name

--- a/app/scripts/templates/asset-details.ejs
+++ b/app/scripts/templates/asset-details.ejs
@@ -41,11 +41,12 @@
         </h4>
     </div>
     <div class="col-sm-3">
+    	<div class="col-sm-12">
         <small>SUPPLIER</small>
-		<td>
-		    <%= model.get( 'serial_number' ) %>
-		</td>
+        <h4>
+		    <%= model.get( 'supplier' ) %>
         </h4>
+        </div>
     </div>
     <div class="col-sm-3">
         <small>DATE PURCHASED</small>
