--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -33,13 +33,10 @@
     <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip delete-asset">&nbsp;x&nbsp;</button>
 
     <div class="searchBox" style='display:none;' id=<%= "div"+ model.get( '_id' ) %>>
-        <input type="hidden" class="bigdrop" id="search2" style="width:150px;" /> <a id='closelink' href="#">close</a>
+        <input type="hidden" class="bigdrop" id="search2" style="width:150px;" />
     </div>
     <script type="text/javascript">
         $( '#search2' ).nameSearch( "<%= model.searchURL %>" );
-        $("#closelink").click(function() {
-            $('.searchBox').hide();
-        });
     </script>
 </td>
 <script>
