--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -99,7 +99,7 @@
                     <button type="submit" class="btn btn-add">
                         <span class="glyphicon glyphicon-ok-sign"></span> Save Changes
                     </button>
-                    <button type="submit" class="btn btn-add btn-load" disabled> Please wait.. </button>
+		    <button type="submit" class="btn btn-add btn-load" disabled> Saving Changes.. </button>
                 </div>
             </div>
         </form>
