Initial implementation of Change password.

--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -12,9 +12,23 @@
                             <strong>Elizar Pepino</strong>
                         </p>
                     </li>
-                    <li>
-                        <a href="/account-settings" class="account-settings">
-                            <span class="glyphicon glyphicon-cog"></span> Account Settings </a>
+		    <li class="dropdown">
+			<a class="dropdown-toggle" href="/account-settings" data-toggle="dropdown">
+				<span class="glyphicon glyphicon-cog"></span> Account Settings
+			</a>
+						<div class="dropdown-menu" style="padding: 15px;background-color:#BCDB6D;border-top:0;">
+							<form method="post" accept-charset="UTF-8" class="account-settings">
+							  <input id="old_password" type="password" placeholder="Old Password" name="" size="30" />
+							  <input id="new_password" type="password" placeholder="New Password" name="" size="30" />
+							  <input id="con_password" type="password" placeholder="Confirm Password" name="" size="30" />
+							  <div class="btns">
+								<button type="submit" class="btn btn-primary btn-settings">
+									<span class="glyphicon glyphicon-circle-arrow-right"></span> Saving Settings
+								</button>
+								<button type="submit" class="btn btn-add btn-load" disabled> Please wait... </button>
+							</div>
+							</form>
+						</div>
                     </li>
                     <li>
                         <a href="#logout" class="logout">
