Initial implementation for user login

--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -9,7 +9,7 @@
                 <% if (model.get('user')) { %>
                     <li>
                         <p class="navbar-text navbar-right">Logged in as
-                            <strong>Elizar Pepino</strong>
+			    <strong><%= model.get('user').first_name + ' ' + model.get('user').last_name  %></strong>
                         </p>
                     </li>
 		    <li class="dropdown">
