modified 'account settings' to 'change password'

--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -14,7 +14,7 @@
                     </li>
 		    <li class="dropdown">
 			<a class="dropdown-toggle" href="/account-settings" data-toggle="dropdown">
-				<span class="glyphicon glyphicon-cog"></span> Account Settings
+				<span class="glyphicon glyphicon-cog"></span> Change Password
 			</a>
 						<div class="dropdown-menu" style="padding: 15px;background-color:#BCDB6D;border-top:0;">
 							<form method="post" accept-charset="UTF-8" class="account-settings">
@@ -23,7 +23,7 @@
 							  <input id="con_password" type="password" placeholder="Confirm Password" name="" size="30" />
 							  <div class="btns">
 								<button type="submit" class="btn btn-primary btn-settings">
-									<span class="glyphicon glyphicon-circle-arrow-right"></span> Saving Settings
+									<span class="glyphicon glyphicon-circle-arrow-right"></span> Save Changes
 								</button>
 								<button type="submit" class="btn btn-add btn-load" disabled> Please wait... </button>
 							</div>
