--- a/app/scripts/templates/inventory-report.ejs
+++ b/app/scripts/templates/inventory-report.ejs
@@ -1,5 +1,5 @@
 <td class="col-sm-7">
-	<a href="#" data-toggle="tooltip" title="" data-placement='right' class="changecolor tool-tip view-items-details" data-original-title="please click to view more details." data-html='true'><%= model.get('asset_name') %></a>
+	<a data-toggle="tooltip" title="" data-placement='right' class="changecolor tool-tip view-items-details" data-original-title="please click to view more details." data-html='true'><%= model.get('asset_name') %></a>
 	<div class="items-views-detail hide">
         <span class = "items-field">Type :</span> <span class="items-value"><%= model.get('asset_type') %></span>
         <span class = "items-field">Description   :</span> <span class="items-value"><%= model.get('asset_description') %></span>
