--- a/app/scripts/templates/inventory-reports.ejs
+++ b/app/scripts/templates/inventory-reports.ejs
@@ -4,12 +4,12 @@
 <div class="row">
     <div class="col-xs-12 col-md-8">
         <div class="filters">
-            <select class="assets-filter">
+            <select class="inventory-filter">
                 <option value="all">List of Items</option>
                 <option value="assigned">List of Items by Status</option>
             </select>
             <script>
-            	$('.assets-filter').selectpicker();
+            	$('.inventory-filter').selectpicker();
             </script>
         </div>
     </div>
