--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -184,7 +184,11 @@ button.selectpicker {
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
+}
+
+.alert.alert-danger {
+	text-align: center;
 }
 
 .btns {
