--- a/app/scripts/templates/asset-details.ejs
+++ b/app/scripts/templates/asset-details.ejs
@@ -1,9 +1,11 @@
+<% var user = window.App.view.model.get( 'user' ) %>
 <hr />
 <div class="row">
     <div class="col-sm-6">
         <a href="/assets" class="btn btn-default btn-sm pull-left">
             <span class="glyphicon glyphicon-circle-arrow-left"></span> Back to List </a>
     </div>
+    <% if( user.user_role.match( /(admin|custodian)/ ) ) { %>
     <div class="col-sm-6">
         <div class=" pull-right">
             <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-sm edit-asset">
@@ -12,6 +14,7 @@
                 <span class="glyphicon glyphicon-remove-circle"></span> Delete </button>
         </div>
     </div>
+    <% } %>
 </div>
 <div class="row-fluid">
 	<hr>
