--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -16,15 +16,28 @@
 						<a class="dropdown-toggle" href="" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span> Change Password</a>
 							<div class="dropdown-menu change-password-form">
 								<form method="post" accept-charset="UTF-8" class="change-password">
-									<input id="old_password" class="form-control" type="password" placeholder="Old Password" size="30" />
-									<input id="new_password" class="form-control" type="password" placeholder="New Password" size="30" />
-									<input id="con_password" class="form-control" type="password" placeholder="Confirm Password" size="30" />
-
-									<div class="btns">
-										<button type="submit" class="btn btn-primary btn-settings">
-											<span class="glyphicon glyphicon-circle-arrow-right"></span> Save Changes
-										</button>
-										<button type="submit" class="btn btn-add btn-load" disabled> Please wait... </button>
+									<div class="alert alert-danger hidden">
+										<span class="change-password-error"></span>
+									</div>
+									<div class="form-group">
+										<label class="form-control-label">Old Password</label>
+										<input id="old_password" class="form-control" type="password" placeholder="Old Password" size="30" />
+									</div>
+									<div class="form-group">
+										<label class="form-control-label">New Password</label>
+										<input id="new_password" class="form-control" type="password" placeholder="New Password" size="30" />
+									</div>
+									<div class="form-group">
+										<label class="form-control-label">Verify Password</label>
+										<input id="con_password" class="form-control" type="password" placeholder="Verify Password" size="30" />
+									</div>
+									<div class="form-group btn-settings">
+										<div class="btns">
+											<button type="submit" class="btn btn-primary">
+												<span class="glyphicon glyphicon-circle-arrow-right"></span> Save Changes
+											</button>
+											<button type="submit" class="btn btn-add btn-load" disabled> Please wait.. </button>
+										</div>
 									</div>
 								</form>
 							</div>
