--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -352,7 +352,15 @@ tr.inventory-entry {
 	.changecolor {
 		text-decoration: none;
 	}
+	.selected-item-views {
+		border-bottom : 1px dashed #428BCA;
+		display       : block;
+		padding       : 0 0 5px 5px;
+	}
 	.items-views-detail {
+
+		background-color:#D0E2F2;
+
 		.items-field {
 			text-align : right;
 			display    : inline-block;
